// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View: Component should not render any step 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={null}
    headerTitle="name"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/1/datasource/",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="Confirm Removal"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.9)",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "color": "FFFFFF",
          "display": "flex",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the data source?"
        id="dataSource.view.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="dataSource.view.cancelRemoval"
          values={Object {}}
        />
      </Styled(Component)>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="dataSource.view.confirmRemoval"
          values={Object {}}
        />
      </Styled(Component)>
    </styled.div>
  </Modal>
</styled.div>
`;

exports[`View: Component should not render content 1`] = `<styled.div />`;

exports[`View: Component should render draft 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle="Source"
    headerTitle="Create Data Source"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/1/datasource/",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <WithTheme(SourceComponent)
    dataSource={
      Object {
        "id": "id",
        "project": "1",
        "status": "draft",
      }
    }
    dataWranglingScripts={Array []}
    fetchDataSource={[Function]}
    fetchDataWranglingScripts={[Function]}
    fetchFields={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "step": "1",
        },
      }
    }
    removeDataSource={[Function]}
    sendUpdatedDataWranglingScript={[Function]}
    unmountDataSource={[Function]}
    unmountFields={[Function]}
    updateDataSource={[Function]}
    uploadScript={[Function]}
  />
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="Confirm Removal"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.9)",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "color": "FFFFFF",
          "display": "flex",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the data source?"
        id="dataSource.view.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="dataSource.view.cancelRemoval"
          values={Object {}}
        />
      </Styled(Component)>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="dataSource.view.confirmRemoval"
          values={Object {}}
        />
      </Styled(Component)>
    </styled.div>
  </Modal>
</styled.div>
`;

exports[`View: Component should render second step 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle="Source"
    headerTitle="name"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/1/datasource/",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <WithTheme(SourceComponent)
    dataSource={
      Object {
        "id": "id",
        "name": "name",
        "project": "1",
        "step": "2",
      }
    }
    dataWranglingScripts={Array []}
    fetchDataSource={[Function]}
    fetchDataWranglingScripts={[Function]}
    fetchFields={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "step": "1",
        },
      }
    }
    removeDataSource={[Function]}
    sendUpdatedDataWranglingScript={[Function]}
    unmountDataSource={[Function]}
    unmountFields={[Function]}
    updateDataSource={[Function]}
    uploadScript={[Function]}
  />
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="Confirm Removal"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.9)",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "color": "FFFFFF",
          "display": "flex",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the data source?"
        id="dataSource.view.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="dataSource.view.cancelRemoval"
          values={Object {}}
        />
      </Styled(Component)>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="dataSource.view.confirmRemoval"
          values={Object {}}
        />
      </Styled(Component)>
    </styled.div>
  </Modal>
</styled.div>
`;

exports[`View: Component should render source step 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle="Source"
    headerTitle="name"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/1/datasource/",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <WithTheme(SourceComponent)
    dataSource={
      Object {
        "id": "id",
        "name": "name",
        "project": "1",
      }
    }
    dataWranglingScripts={Array []}
    fetchDataSource={[Function]}
    fetchDataWranglingScripts={[Function]}
    fetchFields={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "step": "1",
        },
      }
    }
    removeDataSource={[Function]}
    sendUpdatedDataWranglingScript={[Function]}
    unmountDataSource={[Function]}
    unmountFields={[Function]}
    updateDataSource={[Function]}
    uploadScript={[Function]}
  />
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="Confirm Removal"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.9)",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "color": "FFFFFF",
          "display": "flex",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the data source?"
        id="dataSource.view.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="dataSource.view.cancelRemoval"
          values={Object {}}
        />
      </Styled(Component)>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="dataSource.view.confirmRemoval"
          values={Object {}}
        />
      </Styled(Component)>
    </styled.div>
  </Modal>
</styled.div>
`;
